--- a/index.html
+++ b/index.html
@@ -45,8 +45,6 @@
         <li><a href="#about">About</a></li>
         <li><a href="#experience">Experience</a></li>
         <li><a href="#portfolio">Work</a></li>
-        <li><a href="#photo">Photo</a></li>
-        <li><a href="#publications">Publications</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
@@ -154,13 +152,7 @@
             </div>
             <br />
             <p class="paragraph-section about">
-              Hello! I'm Elsie, a full-stack web developer based in Los Angeles,
-              California. I like building things whether it is as creative as
-              recreating the photos I've took from my favorite sunset, as
-              experimental as reassembling nanoparticles to produce energy, or
-              as innovative as developing competitive websites/app. I like to
-              create products that are truly unique and reflect
-              their value and aesthetics.
+              Hello, I'm a full-stack web developer. I create products that are truly unique and reflect their value and aesthetics.
               <br />
               <br />
               I have a bachelor's degree in Biochemistry, with a specialized
@@ -262,13 +254,13 @@
           <div class="box-container">
             <div class="box-item">
               <div class="flip-box">
-                <div class="flip-box-front text-center" style="background-image: url('https://s25.postimg.cc/frbd9towf/cta-2.png');">
+                <div class="flip-box-front text-center" style="background-color:black;">
                   <div class="inner color-white">
                     <h3 class="flip-box-header">Task-it</h3>
                     <p>A multi-platform task management tool.</p>
                   </div>
                 </div>
-                <div class="flip-box-back text-center" style="background-image: url('https://s25.postimg.cc/frbd9towf/cta-2.png');">
+                <div class="flip-box-back text-center" style="background-color:black;">
                   <div class="inner color-white">
                     <div class="back-para">An user-friendly management tool to complete projects more efficiently by organizing, scheduling, and prioritising related tasks.</div><br>
                     <div class="listoftools">[ HTML, CSS, Javascript, React, MongoDB, NodeJS, Express ]</div>
@@ -279,13 +271,13 @@
             </div>
             <div class="box-item">
               <div class="flip-box">
-                <div class="flip-box-front text-center" style="background-image: url('https://s25.postimg.cc/hj4c4qnov/cta-3.png');">
+                <div class="flip-box-front text-center" style="background-color:black;">
                   <div class="inner color-white">
                     <h3 class="flip-box-header">Burger Builder</h3>
                     <p>An interactive web tool to create and order your burger.</p>
                   </div>
                 </div>
-                <div class="flip-box-back text-center" style="background-image: url('https://s25.postimg.cc/hj4c4qnov/cta-3.png');">
+                <div class="flip-box-back text-center" style="background-color:black;">
                   <div class="inner color-white">
                     <div class="back-para">An interactive web tool to create your own burger using listed ingredients and get an estimated price before ordering.
                     </div><br>
@@ -297,15 +289,15 @@
             </div>
             <div class="box-item">
               <div class="flip-box">
-                <div class="flip-box-front text-center filter-" style="background-image: url('https://s25.postimg.cc/l2q9ujy4f/cta-4.png');">
+                <div class="flip-box-front text-center filter-" style="background-color:black;">
                   <div class="inner color-white">
-                    <h3 class="flip-box-header">MRI Instrument Analyzer</h3>
-                    <p>A real-time MRI Instrument Monitoring Web App.</p>
+                    <h3 class="flip-box-header">Repository for MRI Data</h3>
+                    <p>[Blank]</p>
                   </div>
                 </div>
-                <div class="flip-box-back text-center" style="background-image: url('https://s25.postimg.cc/l2q9ujy4f/cta-4.png');">
+                <div class="flip-box-back text-center" style="background-color:black;">
                   <div class="inner color-white">
-                    <div class="back-para">A real-time web application that monitors and analyzes the performance of MRI for making more efficient troubleshooting. </div><br>
+                    <div class="back-para">[Description] </div><br>
                     <div class="listoftools">[ HTML, CSS, Javascript, React, MongoDB, NodeJS, Express ]</div>
                     <button class="flip-box-button">Learn More</button>
                   </div>
@@ -314,13 +306,13 @@
             </div>
             <div class="box-item">
               <div class="flip-box">
-                <div class="flip-box-front text-center" style="background-image: url('https://s25.postimg.cc/hj4c4qnov/cta-3.png');">
+                <div class="flip-box-front text-center" style="background-color:black;">
                   <div class="inner color-white">
                     <h3 class="flip-box-header">Medicaly</h3>
                     <p>Under Construction</p>
                   </div>
                 </div>
-                <div class="flip-box-back text-center" style="background-image: url('https://s25.postimg.cc/hj4c4qnov/cta-3.png');">
+                <div class="flip-box-back text-center" style="background-color:black;">
                   <div class="inner color-white">
                     <p class="back-para">Under Construction
                     </p><br>
@@ -332,13 +324,13 @@
             </div>
             <div class="box-item">
               <div class="flip-box">
-                <div class="flip-box-front text-center" style="background-image: url('https://s25.postimg.cc/frbd9towf/cta-2.png');">
+                <div class="flip-box-front text-center" style="background-color:black;">
                   <div class="inner color-white">
                     <h3 class="flip-box-header">Task-it</h3>
                     <p>A multi-platform task management tool.</p>
                   </div>
                 </div>
-                <div class="flip-box-back text-center" style="background-image: url('https://s25.postimg.cc/frbd9towf/cta-2.png');">
+                <div class="flip-box-back text-center" style="background-color:black;">
                   <div class="inner color-white">
                     <div class="back-para">An user-friendly management tool to complete projects more efficiently by organizing, scheduling, and prioritising related tasks.</div><br>
                     <div class="listoftools">[ HTML, CSS, Javascript, React, MongoDB, NodeJS, Express ]</div>
@@ -349,15 +341,119 @@
             </div>
             <div class="box-item">
               <div class="flip-box">
-                <div class="flip-box-front text-center filter-" style="background-image: url('https://s25.postimg.cc/l2q9ujy4f/cta-4.png');">
+                <div class="flip-box-front text-center filter-" style="background-color:black;">
                   <div class="inner color-white">
-                    <h3 class="flip-box-header">MRI Instrument Analyzer</h3>
-                    <p>A real-time MRI Instrument Monitoring Web App.</p>
+                    <h3 class="flip-box-header">Repository for MRI Data</h3>
+                    <p>[Blank]</p>
                   </div>
                 </div>
-                <div class="flip-box-back text-center" style="background-image: url('https://s25.postimg.cc/l2q9ujy4f/cta-4.png');">
+                <div class="flip-box-back text-center" style="background-color:black;">
                   <div class="inner color-white">
-                    <div class="back-para">A real-time web application that monitors and analyzes the performance of MRI for making more efficient troubleshooting. </div><br>
+                    <div class="back-para">[Description] </div><br>
+                    <div class="listoftools">[ HTML, CSS, Javascript, React, MongoDB, NodeJS, Express ]</div>
+                    <button class="flip-box-button">Learn More</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="box-item">
+              <div class="flip-box">
+                <div class="flip-box-front text-center" style="background-color:black;">
+                  <div class="inner color-white">
+                    <h3 class="flip-box-header">Task-it</h3>
+                    <p>A multi-platform task management tool.</p>
+                  </div>
+                </div>
+                <div class="flip-box-back text-center" style="background-color:black;">
+                  <div class="inner color-white">
+                    <div class="back-para">An user-friendly management tool to complete projects more efficiently by organizing, scheduling, and prioritising related tasks.</div><br>
+                    <div class="listoftools">[ HTML, CSS, Javascript, React, MongoDB, NodeJS, Express ]</div>
+                    <button class="flip-box-button">Learn More</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="box-item">
+              <div class="flip-box">
+                <div class="flip-box-front text-center" style="background-color:black;">
+                  <div class="inner color-white">
+                    <h3 class="flip-box-header">Burger Builder</h3>
+                    <p>An interactive web tool to create and order your burger.</p>
+                  </div>
+                </div>
+                <div class="flip-box-back text-center" style="background-color:black;">
+                  <div class="inner color-white">
+                    <div class="back-para">An interactive web tool to create your own burger using listed ingredients and get an estimated price before ordering.
+                    </div><br>
+                    <div class="listoftools">[ HTML, CSS, Javascript, React, MongoDB, NodeJS, Express ]</div>
+                    <button class="flip-box-button">Learn More</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="box-item">
+              <div class="flip-box">
+                <div class="flip-box-front text-center filter-" style="background-color:black;">
+                  <div class="inner color-white">
+                    <h3 class="flip-box-header">Repository for MRI Data</h3>
+                    <p>[Blank]</p>
+                  </div>
+                </div>
+                <div class="flip-box-back text-center" style="background-color:black;">
+                  <div class="inner color-white">
+                    <div class="back-para">[Description] </div><br>
+                    <div class="listoftools">[ HTML, CSS, Javascript, React, MongoDB, NodeJS, Express ]</div>
+                    <button class="flip-box-button">Learn More</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="box-item">
+              <div class="flip-box">
+                <div class="flip-box-front text-center" style="background-color:black;">
+                  <div class="inner color-white">
+                    <h3 class="flip-box-header">Medicaly</h3>
+                    <p>Under Construction</p>
+                  </div>
+                </div>
+                <div class="flip-box-back text-center" style="background-color:black;">
+                  <div class="inner color-white">
+                    <p class="back-para">Under Construction
+                    </p><br>
+                    <div class="listoftools">[ HTML, CSS, Javascript, React, MongoDB, NodeJS, Express ]</div>
+                    <button class="flip-box-button">Learn More</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="box-item">
+              <div class="flip-box">
+                <div class="flip-box-front text-center" style="background-color:black;">
+                  <div class="inner color-white">
+                    <h3 class="flip-box-header">Task-it</h3>
+                    <p>A multi-platform task management tool.</p>
+                  </div>
+                </div>
+                <div class="flip-box-back text-center" style="background-color:black;">
+                  <div class="inner color-white">
+                    <div class="back-para">An user-friendly management tool to complete projects more efficiently by organizing, scheduling, and prioritising related tasks.</div><br>
+                    <div class="listoftools">[ HTML, CSS, Javascript, React, MongoDB, NodeJS, Express ]</div>
+                    <button class="flip-box-button">Learn More</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="box-item">
+              <div class="flip-box">
+                <div class="flip-box-front text-center filter-" style="background-color:black;">
+                  <div class="inner color-white">
+                    <h3 class="flip-box-header">Repository for MRI Data</h3>
+                    <p>[Blank]</p>
+                  </div>
+                </div>
+                <div class="flip-box-back text-center" style="background-color:black;">
+                  <div class="inner color-white">
+                    <div class="back-para">[Description] </div><br>
                     <div class="listoftools">[ HTML, CSS, Javascript, React, MongoDB, NodeJS, Express ]</div>
                     <button class="flip-box-button">Learn More</button>
                   </div>
@@ -368,7 +464,7 @@
           </div>
         </div>
     </section>
-      <section class="photo" id="photo">
+    <!-- <section class="photo" id="photo">
         <div class="container">
           <div class="section-heading">
             <h1>Photography</h1>
@@ -407,8 +503,8 @@
           </div>
         </div>
       </div>
-      </section>
-    <section class="publications" id="publications">
+      </section> -->
+    <!-- <section class="publications" id="publications">
       <div class="container">
         <div class="section-heading">
           <h1>Publications & Patents</h1>
@@ -476,7 +572,7 @@
         </div>
       </div>
       
-    </section>
+    </section> -->
     </div>
   </div>
 
